...
            "value" : "Abbrechen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        }
      }
    },
    "Acoustic plucked tones" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "Add New Reminder"
          }
        }
      }
    },
    "Add Tracker" : {
      "comment" : "Add tracker button\nSheet title",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
    "Allow" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erlauben"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allow"
...
            "state" : "translated",
            "value" : "Earn every"
          }
        }
      }
    },
    "Easy" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Überschaubar"
...
      "comment" : "Feelings sheet title",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gefühle"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Feelings"
...
      "comment" : "Gratitude sheet title",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dankbarkeit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gratitude"
...
            "state" : "translated",
            "value" : "Hold (out)"
          }
        }
      }
    },
    "How are you feeling?" : {
      "comment" : "Mood selection prompt",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Max on hand"
          }
        }
      }
    },
    "Meditation" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Meditation"
...
            "state" : "translated",
            "value" : "Monday"
          }
        }
      }
    },
    "Mood" : {
      "comment" : "Mood sheet title",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stimmung"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mood"
...
            "state" : "translated",
            "value" : "no workout in the last hour"
          }
        }
      }
    },
    "NoAlc" : {
      "comment" : "Reminder source",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "value" : "Kaum"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Steady"
          }
        }
      }
    },
    "NoAlc.Wild" : {
      "extractionState" : "manual",
...
            "value" : "Party"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Wild"
          }
        }
      }
    },
    "Not logged" : {
      "comment" : "Level tracker not logged",
...
            "state" : "translated",
            "value" : "Not yet"
          }
        }
      }
    },
    "Notice" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hinweis"
...
            "state" : "translated",
            "value" : "Off"
          }
        }
      }
    },
    "OK" : {
      "comment" : "The text on an \"OK\" button.",
      "extractionState" : "manual",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Saturday"
          }
        }
      }
    },
    "Save" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Speichern"
...
            "state" : "translated",
            "value" : "Track your alcohol consumption daily."
          }
        }
      }
    },
    "Tracker" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tracker"
...
            "state" : "translated",
            "value" : "Work: %1$llds  Rest: %2$llds"
          }
        }
      }
    },
    "Workout" : {
      "comment" : "Reminder source",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
